--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.4 <3.0.0'
+  sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
   flutter:
@@ -12,7 +12,8 @@ dependencies:
 
   # External packages.
   cupertino_icons: ^1.0.2
-  go_router: ^6.2.0
+  go_router: ^6.5.8
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
