--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,6 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+    namespace "br.com.williamfranco.app_value_notifier"
     compileSdkVersion 33
     ndkVersion flutter.ndkVersion
 
