--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.williamfranco.app_value_notifier">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
    <application
         android:label="App ValueNotifier"
         android:name="${applicationName}"
