--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,20 +4,22 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-  # External packages.
+  # External dependencies.
   cupertino_icons: ^1.0.2
-  go_router: ^6.5.8
+  go_router: ^8.0.2
   provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # External dev dependencies.
   flutter_lints: ^2.0.0
   import_sorter: ^4.6.0
 
