update flutter sdk and android build gradle files

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: app_value_notifier
-description: Application to manage states in flutter using ValueNotifier.
+description: "Application to manage states in flutter using ValueNotifier."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.1 <4.0.0'
+  sdk: '>=3.2.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -13,7 +13,7 @@ dependencies:
   # External dependencies.
   cupertino_icons: ^1.0.2
   go_router: ^10.1.2
-  provider: ^6.0.5
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
